--- a/Calculus/Homework/HW11.tex
+++ b/Calculus/Homework/HW11.tex
@@ -3,6 +3,8 @@
 \documentclass[english]{article}
 \usepackage[T1]{fontenc}
 \usepackage[latin9]{inputenc}
+\usepackage{geometry}
+\geometry{verbose,lmargin=2cm}
 \usepackage{amsmath}
 \usepackage{esint}
 \usepackage{babel}
